Refactor AbstractDataTreeChangeListenerTest
Rather than exposing the underlying DTCL implementation, expose only the
collector aspect, requiring the collector to be closed -- which also
tears down the listener.

This is a stepping stone to allowing step-by-step assertions.

Change-Id: I9337bc5b80eb9976ad9dec143b59ef75d742cbfd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>